--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body {
+    padding: 25px;
+}
 .App {
     text-align: center;
 }
@@ -36,9 +39,16 @@
         transform: rotate(360deg);
     }
 }
-.imgCont {
-    width: 300px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.style {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+button.btn {
+    font-size: 35px;
 }
